@@ -5,3 +5,4 @@ syntax:glob
 *.py[co]
 .sconsign*
 .svn
+*~
