@@ -6,6 +6,10 @@
 
 RELEASE 2.X.X - 
 
+  From Mortoray:
+    - Make -s (silent mode) be silent about entering subdirs (#2976).
+    - Fix cloning of builders when cloning environment (#2821).
+
   From Gary Oberbrunner:
     - Show valid Visual Studio architectures in error message
        when user passes invalid arch.
@@ -24,6 +28,9 @@ RELEASE 2.X.X -
 
   From Rob Managan:
     - Updated the TeX builder to support LaTeX's multibib package.
+
+  From Arve Knudsen:
+    - Test for FORTRANPPFILESUFFIXES (#2129).
 
 
 RELEASE 2.1.0 - Mon, 09 Sep 2011 20:54:57 -0700
